# GS-Onboarding

./: .gitignore  README.md  db.sql  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/workflows/: frontend_build.yml
backend/: main.py
backend/api/: endpoint.py  endpoints.py  lifespan.py  middlewares.py  request_models.py  response_models.py  setup.py
backend/api/endpoints/: command.py  main_command.py
backend/api/middlewares/: cors_middleware.py  logger_middleware.py
backend/api/models/: request_model.py  response_model.py
backend/api/resources/: command.py  main_command.py
backend/data/: base_model.py  data_models.py  engine.py  enums.py  mock_data.py
backend/domain/: base_service.py  iservice.py
backend/utils/: logging.py  time.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: app.tsx  environment.ts  main.tsx
frontend/src/data/: command.ts  main_command.ts  other.ts  request.ts  response.ts
frontend/src/display/: command_api.ts  row.tsx  table.tsx
frontend/src/input/: command_input.css  command_input.tsx  input_api.ts
test/backend/: conftest.py  test_api.py  test_data.py  test_setup.py
