[metadata]
name = GS-Onboarding
description = Ground Station Onboarding for the University of Waterloo Orbital Design Team 
author = University of Waterloo Orbital Design Team
classifiers =
    Programming Language :: Python :: 3.10 :: Only

[options]
packages = backend
install_requires =
  fastapi>=0.115.0
  sqlmodel>=0.0.22
python_requires = ~=3.10
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.4
    pytest-cov>=4.1

